# AI-Sales-Assistant

./: .gitignore  README.md  pyproject.toml
src/sales_agents/: crew.py  main.py
src/sales_agents/analytics/: descriptive.py  predictive.py  prescriptive.py
src/sales_agents/config/: agents.yaml  tasks.yaml
src/sales_agents/memory/: kb.py
src/sales_agents/tools/: custom_tool.py
src/sales_agents/utils/: intent.py  schema.py  viz.py
